k8s/employee-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-svc-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: employee-svc
  template:
    metadata:
      labels:
        app: employee-svc
    spec:
      containers:
        - name: employee-svc
          image: 366486935206.dkr.ecr.us-east-1.amazonaws.com/employee-svc:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: employee-svc-service
spec:
  selector:
    app: employee-svc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
